--- a/.github/workflows/p0c1-verify.yml
+++ b/.github/workflows/p0c1-verify.yml
@@ -1,4 +1,4 @@
-name: P0C1 – Inert Flag Framework Verification
+name: P0C1 – Inert Flag Framework Verification (robust)
 
 on:
   push:
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PYTHONUNBUFFERED: "1"
-      SPEC_PATH: "examples/quickstart_spec.json"   # change if your canonical spec lives elsewhere
+      SPEC_PATH: "examples/quickstart_spec.json"   # update if your canonical spec lives elsewhere
       SEED: "123"
-      CMD: "python -m crapssim_control.cli"        # robust even if console script isn't installed
-      # Keep engine traces quiet; we only compare outputs
+      ROLLS: "50"
+      CMD: "python -m crapssim_control.cli"
       CSC_DEBUG: "0"
 
     steps:
@@ -33,65 +33,84 @@ jobs:
           echo "HEAD_SHA=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
           echo "PREV_SHA=$(git rev-parse HEAD^)" >> $GITHUB_OUTPUT
 
-      # ---------- BEFORE: HEAD^ ----------
-      - name: Checkout previous commit (baseline)
+      - name: Freeze spec from HEAD for both runs
         run: |
-          git checkout ${{ steps.shas.outputs.PREV_SHA }}
+          mkdir -p /tmp/p0c1
+          cp "${SPEC_PATH}" /tmp/p0c1/spec.json
 
+      # ---------- Install once to pin engine version ----------
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies (baseline)
+      - name: Resolve & Pin engine version
+        id: pin
         run: |
           python -m pip install -U pip
-          # Install engine + optional YAML parser
-          pip install "crapssim>=0.3.0" "PyYAML>=6.0"
-          # Install this package from the previous commit
-          pip install -e .
+          pip install "crapssim" "PyYAML>=6.0"
+          # capture the exact installed version to reuse
+          CRAPSSIM_VERSION=$(python - <<'PY'
+import importlib.metadata as m
+print(m.version("crapssim"))
+PY
+)
+          echo "CRAPSSIM_VERSION=$CRAPSSIM_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Run baseline (stdout capture)
+      # ---------- BEFORE: HEAD^ with pinned engine & frozen spec ----------
+      - name: Checkout previous commit (baseline)
+        run: git checkout ${{ steps.shas.outputs.PREV_SHA }}
+
+      - name: Install package (baseline)
+        run: |
+          pip install -e .
+          python -c "import crapssim, importlib.metadata as m; print('crapssim=='+m.version('crapssim'))"
+          python -c "import crapssim_control as _; print('installed crapssim_control (baseline)')"
+
+      - name: Run baseline (capture)
         run: |
           mkdir -p baselines/p0c1/before
           set -e
-          $CMD run "$SPEC_PATH" --seed "$SEED" > baselines/p0c1/before/out.txt 2>&1
-          # Help text snapshot (to compare later & confirm flags appear in HEAD)
-          $CMD run --help > baselines/p0c1/before/help.txt 2>&1 || true
+          $CMD run /tmp/p0c1/spec.json --seed "$SEED" --rolls "$ROLLS" > baselines/p0c1/before/out.txt 2>&1 || true
+          # RESULT only
+          grep '^RESULT:' baselines/p0c1/before/out.txt > baselines/p0c1/before/result.txt || true
 
-      # ---------- AFTER: HEAD ----------
+      # ---------- AFTER: HEAD with same pinned engine & same frozen spec ----------
       - name: Checkout current commit (candidate)
-        run: |
-          git checkout ${{ steps.shas.outputs.HEAD_SHA }}
+        run: git checkout ${{ steps.shas.outputs.HEAD_SHA }}
 
-      - name: Reinstall package (candidate)
+      - name: Reinstall engine (pinned) and package (candidate)
         run: |
-          python -m pip install -U pip
-          pip install "crapssim>=0.3.0" "PyYAML>=6.0"
+          pip install --force-reinstall --no-deps "crapssim==${{ steps.pin.outputs.CRAPSSIM_VERSION }}"
           pip install -e .
+          python -c "import crapssim, importlib.metadata as m; print('crapssim=='+m.version('crapssim'))"
+          python -c "import crapssim_control as _; print('installed crapssim_control (candidate)')"
 
-      - name: Run candidate (stdout capture)
+      - name: Run candidate (capture)
         run: |
           mkdir -p baselines/p0c1/after
           set -e
-          $CMD run "$SPEC_PATH" --seed "$SEED" > baselines/p0c1/after/out.txt 2>&1
-          # Verify flags exist in help (they can appear only in HEAD, that's OK)
-          $CMD run --help > baselines/p0c1/after/help.txt 2>&1 || true
+          $CMD run /tmp/p0c1/spec.json --seed "$SEED" --rolls "$ROLLS" > baselines/p0c1/after/out.txt 2>&1 || true
+          grep '^RESULT:' baselines/p0c1/after/out.txt > baselines/p0c1/after/result.txt || true
 
-      - name: Compare BEFORE vs AFTER (must be identical)
+      - name: Compare BEFORE vs AFTER (RESULT lines must match)
         run: |
           set -e
-          diff -u baselines/p0c1/before/out.txt baselines/p0c1/after/out.txt
+          diff -u baselines/p0c1/before/result.txt baselines/p0c1/after/result.txt
 
-      - name: Flags are accepted but inert (candidate)
+      - name: Flags are accepted but inert (full stdout within HEAD)
         run: |
           set -e
-          $CMD run "$SPEC_PATH" --seed "$SEED" \
+          $CMD run /tmp/p0c1/spec.json --seed "$SEED" --rolls "$ROLLS" \
+            > baselines/p0c1/after/out_plain.txt 2>&1 || true
+          $CMD run /tmp/p0c1/spec.json --seed "$SEED" --rolls "$ROLLS" \
             --demo-fallbacks --strict --no-embed-analytics \
-            > baselines/p0c1/after/out_flags.txt 2>&1
-          diff -u baselines/p0c1/before/out.txt baselines/p0c1/after/out_flags.txt
+            > baselines/p0c1/after/out_flags.txt 2>&1 || true
+          diff -u baselines/p0c1/after/out_plain.txt baselines/p0c1/after/out_flags.txt
 
       - name: Emit summary
         if: ${{ success() }}
         run: |
-          echo "✅ P0·C1 verified: outputs are byte-identical before vs after, and flags are inert."
+          echo "✅ P0·C1 verified:"
+          echo "   • Same spec (frozen) and pinned engine → RESULT lines identical across commits."
+          echo "   • Within HEAD, flags do not alter full stdout."
