--- a/.github/workflows/p0c1-verify.yml
+++ b/.github/workflows/p0c1-verify.yml
@@ -1,4 +1,4 @@
-name: P0C1 – Verify
+name: P0C1 Verify
 
 on:
   push:
@@ -15,27 +15,55 @@ jobs:
       PYTHONUNBUFFERED: "1"
       PYTHONHASHSEED: "0"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Show repo & spec
-        run: ls -la && ls -la examples || true && ls -la crapssim_control || true && test -f "$SPEC_PATH" || (echo "Spec not found: $SPEC_PATH" && exit 1)
+        run: |
+          set -euxo pipefail
+          ls -la
+          ls -la examples || true
+          ls -la crapssim_control || true
+          test -f "$SPEC_PATH" || (echo "Spec not found: $SPEC_PATH" && exit 1)
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install engine & package
-        run: python -m pip install -U pip && pip install "crapssim" "PyYAML>=6.0" && pip install -e . && python -c "import importlib.metadata as m; print('crapssim=='+m.version('crapssim'))"
-
-      # run once plain
-      - name: Run (plain)
-        run: python -c "from crapssim_control.cli import main; import sys; sys.exit(main(['run','${{ env.SPEC_PATH }}','--seed','${{ env.SEED }}','--rolls','${{ env.ROLLS }}']))"
-
-      # run again with flags; must be identical (inert flags)
-      - name: Run (with flags)
         run: |
-          python -c "from crapssim_control.cli import main; import sys; sys.exit(main(['run','${{ env.SPEC_PATH }}','--seed','${{ env.SEED }}','--rolls','${{ env.ROLLS }}','--demo-fallbacks','--strict','--no-embed-analytics']))"
+          set -euxo pipefail
+          python -m pip install -U pip
+          pip install crapssim PyYAML
+          pip install -e .
+          python - <<'PY'
+import importlib.metadata as m
+print("crapssim=="+m.version("crapssim"))
+print("crapssim_control OK")
+PY
+
+      - name: Run (plain)
+        run: |
+          set -euxo pipefail
+          python - <<'PY'
+from crapssim_control.cli import main
+import sys, os
+sys.exit(main(['run', os.environ['SPEC_PATH'], '--seed', os.environ['SEED'], '--rolls', os.environ['ROLLS']]))
+PY
+
+      - name: Run (with flags) — must match stdout
+        run: |
+          set -euxo pipefail
+          python - <<'PY' > out_plain.txt 2>&1 || true
+from crapssim_control.cli import main
+import sys, os
+sys.exit(main(['run', os.environ['SPEC_PATH'], '--seed', os.environ['SEED'], '--rolls', os.environ['ROLLS']]))
+PY
+          python - <<'PY' > out_flags.txt 2>&1 || true
+from crapssim_control.cli import main
+import sys, os
+sys.exit(main(['run', os.environ['SPEC_PATH'], '--seed', os.environ['SEED'], '--rolls', os.environ['ROLLS'],
+               '--demo-fallbacks','--strict','--no-embed-analytics']))
+PY
+          diff -u out_plain.txt out_flags.txt
