--- a/.github/workflows/p0c1-verify.yml
+++ b/.github/workflows/p0c1-verify.yml
@@ -92,13 +92,14 @@ jobs:
           grep '^RESULT:' baselines/p0c1/after/out.txt > baselines/p0c1/after/result.txt || true
           $CMD run --help > baselines/p0c1/after/help.txt 2>&1 || true
 
-      # Compare RESULT lines, but don't fail on numeric difference
-      - name: Compare BEFORE vs AFTER (RESULT inspection)
+      # --- SOFT CHECK: show diff but don't fail job ---
+      - name: Compare BEFORE vs AFTER (informational)
         run: |
-          set -e
-          echo "--- RESULT diff (informational only) ---"
-          diff -u baselines/p0c1/before/result.txt baselines/p0c1/after/result.txt || true
-          echo "--- END diff ---"
+          set +e
+          echo "----- RESULT DIFF (informational) -----"
+          diff -u baselines/p0c1/before/result.txt baselines/p0c1/after/result.txt
+          echo "---------------------------------------"
+          exit 0
 
       # Within HEAD, flags must be accepted but inert (full stdout comparison)
       - name: Flags are accepted but inert (candidate)
@@ -113,4 +114,4 @@ jobs:
 
       - name: Emit summary
         if: ${{ success() }}
-        run: echo "✅ P0·C1 verified: baseline and candidate both run cleanly; flags inert within HEAD."
+        run: echo "✅ P0·C1 verified: both commits run; flags inert within HEAD."
