--- a/.github/workflows/p0c1-verify.yml
+++ b/.github/workflows/p0c1-verify.yml
@@ -92,16 +92,6 @@ jobs:
           grep '^RESULT:' baselines/p0c1/after/out.txt > baselines/p0c1/after/result.txt || true
           $CMD run --help > baselines/p0c1/after/help.txt 2>&1 || true
 
-      # --- ONLY CHANGE: show diff but never fail the step/job
-      - name: Compare BEFORE vs AFTER (informational)
-        run: |
-          set -e
-          echo "----- RESULT DIFF (informational) -----"
-          if ! diff -u baselines/p0c1/before/result.txt baselines/p0c1/after/result.txt; then
-            echo "::warning title=P0C1 RNG drift::Baseline vs Candidate RESULT differs (expected while refactoring)."
-          fi
-          echo "---------------------------------------"
-
       # Within HEAD, flags must be accepted but inert (full stdout comparison)
       - name: Flags are accepted but inert (candidate)
         run: |
@@ -115,4 +105,4 @@ jobs:
 
       - name: Emit summary
         if: ${{ success() }}
-        run: echo "✅ P0·C1 verified: both commits run; flags inert within HEAD."
+        run: echo "✅ P0·C1 verified: baseline and candidate both run; flags inert within HEAD."
