--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,23 +1,24 @@
 phase: 1
-checkpoint: 1
+checkpoint: 2
 status: active
 branch: phase1-defaults
 previous_tag: v0.29.0-phase0c3-baseline
 next_tag: v0.29.1-phase1-preflight
 goal: Transition from prototype-safe to production-safe defaults.
-last_action: P1·C1 disabled demo fallbacks by default (defaults + shim).
+last_action: P1·C2 wired CLI flag overrides into runtime config + metadata.
 ci_status: green
 agent_mode: true
 docs_version: 2025-10-16
-next_checkpoint: 2
+next_checkpoint: 3
 checkpoints:
   - id: P1C1
     title: Disable demo fallbacks by default
     risk: low
     status: complete
   - id: P1C2
-    title: Add CLI flags (--demo-fallbacks, --strict)
+    title: CLI flag wiring (--demo-fallbacks/--strict/--no-embed-analytics)
     risk: low
+    status: complete
   - id: P1C3
     title: Embed validation_engine metadata
     risk: low
